Q1/1-test.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: backend-pod
  name: backend-pod
  namespace: test-namespace
spec:
  containers:
  - image: moveho/custom-nginx:latest
    name: backend-pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
